src/objects/PEC_Scorecard__c.object
<CustomObject>
    <description>A table that holds the score for a single scorecard - Call Back, Consult, or Role Play (Consult &amp; Call Back)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the consult (account) that is being scored.  This is a required field when doing a call back scorecard,  or a consult scorecard.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PEC Scorecards</relationshipLabel>
        <relationshipName>PEC_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClearChoice_Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the doctor being scored where necessary</description>
        <label>ClearChoice Doctor</label>
        <referenceTo>ClearChoice_Doctor__c</referenceTo>
        <relationshipLabel>PEC Scorecards</relationshipLabel>
        <relationshipName>PEC_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirm_Financial_Needs_Comment__c</fullName>
        <label>Confirm Financial Needs Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_Financial_Needs_How__c</fullName>
        <label>Confirm Financial Needs How</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_Financial_Needs_What__c</fullName>
        <label>Confirm Financial Needs What</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consult_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the consult that is being scored on this record. Only used when doing a consult scorecard</description>
        <label>Consult Inventory</label>
        <referenceTo>Consult_Inventory__c</referenceTo>
        <relationshipLabel>PEC Scorecards</relationshipLabel>
        <relationshipName>PEC_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doctor_Consult_Framing_Continue__c</fullName>
        <label>Doctor Consult Framing Continue</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Consult_Framing_How_Score__c</fullName>
        <label>Doctor Consult Framing How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Consult_Framing_Start__c</fullName>
        <label>Doctor Consult Framing Start</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Consult_Framing_Stop__c</fullName>
        <label>Doctor Consult Framing Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Consult_Framing_What_Score__c</fullName>
        <label>Doctor Consult Framing What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Consult_Needs_Dialogue_Continue__c</fullName>
        <label>Doctor Consult Needs Dialogue Continue</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Consult_Needs_Dialogue_How_Score__c</fullName>
        <label>Doctor Consult Needs Dialogue How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Consult_Needs_Dialogue_Start__c</fullName>
        <label>Doctor Consult Needs Dialogue Start</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Consult_Needs_Dialogue_Stop__c</fullName>
        <label>Doctor Consult Needs Dialogue Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Consult_Needs_Dialogue_What_Score__c</fullName>
        <label>Doctor Consult Needs Dialogue What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Download_How_Score__c</fullName>
        <label>Doctor Download How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Download_Positive_Feedback__c</fullName>
        <label>Doctor Download Positive Feedback</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Download_Positive_Ideas__c</fullName>
        <label>Doctor Download Positive Ideas</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Download_Stop__c</fullName>
        <label>Doctor Download Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Download_What_Score__c</fullName>
        <label>Doctor Download What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Overall_How_Score__c</fullName>
        <label>Doctor Overall How Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor_Overall_Score__c</fullName>
        <formula>if(isblank( Doctor_Possible_Score__c ) || Doctor_Possible_Score__c=0, 
0, Doctor_Total_Score__c / Doctor_Possible_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doctor Overall Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor_Overall_What_Score__c</fullName>
        <label>Doctor Overall What Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor_Possible_How_Score__c</fullName>
        <label>Doctor Possible How Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor_Possible_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Doctor Possible Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor_Possible_What_Score__c</fullName>
        <label>Doctor Possible What Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor_Role_Play_Continue__c</fullName>
        <label>Doctor Role Play Continue</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Role_Play_How_Score__c</fullName>
        <label>Doctor Role Play How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Role_Play_Start__c</fullName>
        <label>Doctor Role Play Start</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Role_Play_Stop__c</fullName>
        <label>Doctor Role Play Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor_Role_Play_What_Score__c</fullName>
        <label>Doctor Role Play What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Total_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Doctor Total Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Conversation_Continue__c</fullName>
        <label>Financial Conversation Continue</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Conversation_How_Score__c</fullName>
        <label>Financial Conversation How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Conversation_Start__c</fullName>
        <label>Financial Conversation Start</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Conversation_Stop__c</fullName>
        <label>Financial Conversation Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Conversation_What_Score__c</fullName>
        <label>Financial Conversation What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Needs_Dialogue_Comment__c</fullName>
        <label>Financial Needs Dialogue Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Needs_Dialogue_How__c</fullName>
        <label>Financial Needs Dialogue How</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Needs_Dialogue_What__c</fullName>
        <label>Financial Needs Dialogue What</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Needs_Possible_Score__c</fullName>
        <formula>if(ISPICKVAL( Financial_Needs_Dialogue_How__c , &apos;NA&apos;) || ISPICKVAL(Financial_Needs_Dialogue_How__c,&apos;&apos;),0,5) + 
if(ISPICKVAL( Financial_Needs_Dialogue_What__c , &apos;NA&apos;) || ISPICKVAL(Financial_Needs_Dialogue_What__c,&apos;&apos;),0,5) + 

if(ISPICKVAL( Confirm_Financial_Needs_How__c , &apos;NA&apos;) || ISPICKVAL(Confirm_Financial_Needs_How__c,&apos;&apos;),0,5) + 
if(ISPICKVAL( Confirm_Financial_Needs_What__c , &apos;NA&apos;) || ISPICKVAL(Confirm_Financial_Needs_What__c,&apos;&apos;),0,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Needs Possible Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financial_Needs_Total_Score__c</fullName>
        <formula>if(ISPICKVAL( Financial_Needs_Dialogue_How__c , &apos;1&apos;),1,0) + 
if(ISPICKVAL( Financial_Needs_Dialogue_How__c , &apos;2&apos;),2,0) + 
if(ISPICKVAL( Financial_Needs_Dialogue_How__c , &apos;3&apos;),3,0) + 
if(ISPICKVAL( Financial_Needs_Dialogue_How__c , &apos;4&apos;),4,0) + 
if(ISPICKVAL( Financial_Needs_Dialogue_How__c , &apos;5&apos;),5,0) + 

if(ISPICKVAL( Financial_Needs_Dialogue_What__c , &apos;1&apos;),1,0) + 
if(ISPICKVAL( Financial_Needs_Dialogue_What__c , &apos;2&apos;),2,0) + 
if(ISPICKVAL( Financial_Needs_Dialogue_What__c , &apos;3&apos;),3,0) + 
if(ISPICKVAL( Financial_Needs_Dialogue_What__c , &apos;4&apos;),4,0) + 
if(ISPICKVAL( Financial_Needs_Dialogue_What__c , &apos;5&apos;),5,0) + 

if(ISPICKVAL( Confirm_Financial_Needs_How__c , &apos;1&apos;),1,0) + 
if(ISPICKVAL( Confirm_Financial_Needs_How__c , &apos;2&apos;),2,0) + 
if(ISPICKVAL( Confirm_Financial_Needs_How__c , &apos;3&apos;),3,0) + 
if(ISPICKVAL( Confirm_Financial_Needs_How__c , &apos;4&apos;),4,0) + 
if(ISPICKVAL( Confirm_Financial_Needs_How__c , &apos;5&apos;),5,0) + 

if(ISPICKVAL( Confirm_Financial_Needs_What__c , &apos;1&apos;),1,0) + 
if(ISPICKVAL( Confirm_Financial_Needs_What__c , &apos;2&apos;),2,0) + 
if(ISPICKVAL( Confirm_Financial_Needs_What__c , &apos;3&apos;),3,0) + 
if(ISPICKVAL( Confirm_Financial_Needs_What__c , &apos;4&apos;),4,0) + 
if(ISPICKVAL( Confirm_Financial_Needs_What__c , &apos;5&apos;),5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Needs Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Viewed_Time__c</fullName>
        <label>First Viewed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Frame_Price_Continue__c</fullName>
        <label>Frame Price Continue</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frame_Price_How_Score__c</fullName>
        <label>Frame Price How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frame_Price_Start__c</fullName>
        <label>Frame Price Start</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frame_Price_Stop__c</fullName>
        <label>Frame Price Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Frame_Price_What_Score__c</fullName>
        <label>Frame Price What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Framing_How_Score__c</fullName>
        <label>Framing How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Framing_Positive_Feedback__c</fullName>
        <label>Framing Positive Feedback</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Framing_Positive_Ideas__c</fullName>
        <label>Framing Positive Ideas</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Framing_Stop__c</fullName>
        <label>Framing Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Framing_What_Score__c</fullName>
        <label>Framing What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Dialogue_How_Score__c</fullName>
        <label>Needs Dialogue How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Dialogue_Positive_Feedback__c</fullName>
        <label>Needs Dialogue Positive Feedback</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Needs_Dialogue_Positive_Ideas__c</fullName>
        <label>Needs Dialogue Positive Ideas</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Needs_Dialogue_Stop__c</fullName>
        <label>Needs Dialogue Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Needs_Dialogue_What_Score__c</fullName>
        <label>Needs Dialogue What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <formula>if(isblank( Total_Possible_Score__c ) || Total_Possible_Score__c=0, 
0, Total_Score__c / Total_Possible_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PEC_Consult_Wrap_Up_Continue__c</fullName>
        <label>PEC Consult Wrap Up Continue</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEC_Consult_Wrap_Up_Start__c</fullName>
        <label>PEC Consult Wrap Up Start</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEC_Consult_Wrap_Up_Stop__c</fullName>
        <label>PEC Consult Wrap Up Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEC_Consult_Wrap_Up_What_Score__c</fullName>
        <label>PEC Consult Wrap Up What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PEC_Consult_Wrap_up_how_score__c</fullName>
        <label>PEC Consult Wrap up how score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PEC_Solutions_Wrap_Up_Continue__c</fullName>
        <label>PEC Solutions Wrap Up Continue</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEC_Solutions_Wrap_Up_How_Score__c</fullName>
        <label>PEC Solutions Wrap Up How Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PEC_Solutions_Wrap_Up_Start__c</fullName>
        <label>PEC Solutions Wrap Up Start</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEC_Solutions_Wrap_Up_Stop__c</fullName>
        <label>PEC Solutions Wrap Up Stop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEC_Solutions_Wrap_Up_What_Score__c</fullName>
        <label>PEC Solutions Wrap Up What Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pec_Scored__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pec Scored</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PEC_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualified_Scorecard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified Scorecard</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>